--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -5,6 +5,7 @@ members = ["cargo:."]
 [dist]
 # The preferred dist version to use in CI (Cargo.toml SemVer syntax)
 cargo-dist-version = "0.28.6-tinymist.2"
+# A URL to use to install `cargo-dist` (with the installer script)
 cargo-dist-url-override = "https://github.com/Myriad-Dreamin/cargo-dist/releases/download/v0.28.0-tinymist.2"
 # CI backends to support
 ci = "github"
@@ -15,29 +16,7 @@ windows-archive = ".zip"
 # The archive format to use for non-windows builds (defaults .tar.xz)
 unix-archive = ".tar.gz"
 # Target platforms to build apps for (Rust target-triple syntax)
-# These targets are determined based on the awesome ruff project...
-targets = [
-    "aarch64-apple-darwin",
-    "aarch64-pc-windows-msvc",
-    "aarch64-unknown-linux-gnu",
-    "aarch64-unknown-linux-musl",
-    "arm-unknown-linux-musleabihf",
-    "armv7-unknown-linux-gnueabihf",
-    "armv7-unknown-linux-musleabihf",
-    # "i686-pc-windows-msvc",
-    # "i686-unknown-linux-gnu",
-    # "i686-unknown-linux-musl",
-    # "powerpc64-unknown-linux-gnu",
-    # "powerpc64le-unknown-linux-gnu",
-    "x86_64-apple-darwin",
-    "x86_64-pc-windows-msvc",
-    "x86_64-unknown-linux-gnu",
-    "x86_64-unknown-linux-musl",
-    # "riscv64gc-unknown-linux-gnu",
-    "riscv64gc-unknown-linux-musl",
-    "loongarch64-unknown-linux-gnu",
-    "loongarch64-unknown-linux-musl",
-]
+targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "aarch64-pc-windows-msvc", "arm-unknown-linux-musleabihf", "armv7-unknown-linux-gnueabihf", "armv7-unknown-linux-musleabihf", "x86_64-apple-darwin", "loongarch64-unknown-linux-gnu", "loongarch64-unknown-linux-musl", "riscv64gc-unknown-linux-musl", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
 # Whether to auto-include files like READMEs, LICENSEs, and CHANGELOGs (default true)
 auto-includes = false
 # Whether dist should create a Github Release or use an existing draft
