--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -15,8 +15,29 @@ installers = ["shell", "powershell"]
 windows-archive = ".zip"
 # The archive format to use for non-windows builds (defaults .tar.xz)
 unix-archive = ".tar.gz"
-# Target platforms to build apps for (Rust target-triple syntax)
-targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "aarch64-pc-windows-msvc", "arm-unknown-linux-musleabihf", "armv7-unknown-linux-gnueabihf", "armv7-unknown-linux-musleabihf", "x86_64-apple-darwin", "loongarch64-unknown-linux-gnu", "loongarch64-unknown-linux-musl", "riscv64gc-unknown-linux-musl", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
+# These targets are determined based on the awesome ruff project...
+targets = [
+    "aarch64-apple-darwin",
+    "aarch64-pc-windows-msvc",
+    "aarch64-unknown-linux-gnu",
+    "aarch64-unknown-linux-musl",
+    "arm-unknown-linux-musleabihf",
+    "armv7-unknown-linux-gnueabihf",
+    "armv7-unknown-linux-musleabihf",
+    # "i686-pc-windows-msvc",
+    # "i686-unknown-linux-gnu",
+    # "i686-unknown-linux-musl",
+    # "powerpc64-unknown-linux-gnu",
+    # "powerpc64le-unknown-linux-gnu",
+    "x86_64-apple-darwin",
+    "x86_64-pc-windows-msvc",
+    "x86_64-unknown-linux-gnu",
+    "x86_64-unknown-linux-musl",
+    # "riscv64gc-unknown-linux-gnu",
+    "riscv64gc-unknown-linux-musl",
+    "loongarch64-unknown-linux-gnu",
+    "loongarch64-unknown-linux-musl",
+]
 # Whether to auto-include files like READMEs, LICENSEs, and CHANGELOGs (default true)
 auto-includes = false
 # Whether dist should create a Github Release or use an existing draft
