--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -51,5 +51,12 @@ install-updater = false
 # Path that installers should place binaries in
 install-path = ["$XDG_BIN_HOME/", "$XDG_DATA_HOME/../bin", "~/.local/bin"]
 
+[dist.min-glibc-version]
+# Override glibc version for specific target triplets.
+aarch64-unknown-linux-gnu = "2.28"
+riscv64gc-unknown-linux-gnu = "2.31"
+# Override all remaining glibc versions.
+"*" = "2.17"
+
 [dist.github-custom-runners]
 aarch64-pc-windows-msvc = "windows-latest"
