--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,6 +18,7 @@ doc = false
 
 [dependencies]
 
+axum.workspace = true
 clap.workspace = true
 clap_complete.workspace = true
 clap_complete_fig.workspace = true
@@ -37,8 +38,13 @@ serde_json.workspace = true
 termcolor.workspace = true
 toml.workspace = true
 tokio.workspace = true
+tower = { version = "0.5.2", features = ["util"] }
+tower-http = { version = "0.6.1", features = [
+    "fs",
+    "compression-gzip",
+    "decompression-gzip",
+] }
 url.workspace = true
-warp.workspace = true
 
 reflexo-typst = { workspace = true, features = [
     "dynamic-layout",
