--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -35,8 +35,8 @@ targets = [
     "x86_64-unknown-linux-musl",
     # "riscv64gc-unknown-linux-gnu",
     "riscv64gc-unknown-linux-musl",
-    "loongarch64-unknown-linux-gnu",
-    "loongarch64-unknown-linux-musl",
+    # "loongarch64-unknown-linux-gnu",
+    # "loongarch64-unknown-linux-musl",
 ]
 # Whether to auto-include files like READMEs, LICENSEs, and CHANGELOGs (default true)
 auto-includes = false
