--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -4,8 +4,9 @@ members = ["cargo:."]
 # Config for 'dist'
 [dist]
 # The preferred dist version to use in CI (Cargo.toml SemVer syntax)
-cargo-dist-version = "0.28.0-tinymist.2"
-cargo-dist-url-override = "https://github.com/Myriad-Dreamin/cargo-dist/releases/download/v0.28.0-tinymist.2"
+cargo-dist-version = "0.28.6-tinymist.2"
+# A URL to use to install `cargo-dist` (with the installer script)
+cargo-dist-url-override = "https://github.com/Myriad-Dreamin/cargo-dist/releases/download/v0.28.6-tinymist.2"
 # CI backends to support
 ci = "github"
 # The installers to generate for each app
@@ -14,7 +15,6 @@ installers = ["shell", "powershell"]
 windows-archive = ".zip"
 # The archive format to use for non-windows builds (defaults .tar.xz)
 unix-archive = ".tar.gz"
-# Target platforms to build apps for (Rust target-triple syntax)
 # These targets are determined based on the awesome ruff project...
 targets = [
     "aarch64-apple-darwin",
@@ -35,8 +35,8 @@ targets = [
     "x86_64-unknown-linux-musl",
     # "riscv64gc-unknown-linux-gnu",
     "riscv64gc-unknown-linux-musl",
-    "loongarch64-unknown-linux-gnu",
-    "loongarch64-unknown-linux-musl",
+    # "loongarch64-unknown-linux-gnu",
+    # "loongarch64-unknown-linux-musl",
 ]
 # Whether to auto-include files like READMEs, LICENSEs, and CHANGELOGs (default true)
 auto-includes = false
@@ -51,17 +51,12 @@ install-updater = false
 # Path that installers should place binaries in
 install-path = ["$XDG_BIN_HOME/", "$XDG_DATA_HOME/../bin", "~/.local/bin"]
 
+[dist.min-glibc-version]
+# Override glibc version for specific target triplets.
+aarch64-unknown-linux-gnu = "2.28"
+riscv64gc-unknown-linux-gnu = "2.31"
+# Override all remaining glibc versions.
+"*" = "2.17"
+
 [dist.github-custom-runners]
-global = "ubuntu-22.04"
 aarch64-pc-windows-msvc = "windows-latest"
-aarch64-unknown-linux-gnu = "ubuntu-22.04"
-aarch64-unknown-linux-musl = "ubuntu-22.04"
-arm-unknown-linux-musleabihf = "ubuntu-22.04"
-armv7-unknown-linux-gnueabihf = "ubuntu-22.04"
-armv7-unknown-linux-musleabihf = "ubuntu-22.04"
-x86_64-unknown-linux-gnu = "ubuntu-22.04"
-x86_64-unknown-linux-musl = "ubuntu-22.04"
-# riscv64gc-unknown-linux-gnu = "ubuntu-22.04"
-riscv64gc-unknown-linux-musl = "ubuntu-22.04"
-loongarch64-unknown-linux-gnu = "ubuntu-22.04"
-loongarch64-unknown-linux-musl = "ubuntu-22.04"
