--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -45,8 +45,8 @@ tower-http = { version = "0.6.1", features = [
     "decompression-gzip",
 ] }
 mime_guess = "2"
-futures-util = "0.3"
 async-stream = "0.3"
+notify = "6"
 url.workspace = true
 
 reflexo-typst = { workspace = true, features = [
