--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -39,17 +39,10 @@ termcolor.workspace = true
 toml.workspace = true
 tokio.workspace = true
 console-subscriber = { version = "0.4", optional = true }
-tower = { version = "0.5.2", features = ["util"] }
-tower-http = { version = "0.6.1", features = [
-    "fs",
-    "util",
-    "map-response-body",
-    "compression-gzip",
-    "decompression-gzip",
-] }
+warp.workspace = true
 async-stream = "0.3"
-notify = "6"
 tokio-util = "0.7.10"
+notify = "6"
 url.workspace = true
 
 reflexo-typst = { workspace = true, features = [
