--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,11 @@ typst = "0.13.0"
 typst-eval = "0.13.0"
 typst-assets = "0.13.0"
 # typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
-reflexo-typst = { version = "0.6.1-rc1", features = ["html"] }
-reflexo-vec2svg = { version = "0.6.1-rc1", features = [
+reflexo-typst = { version = "0.6.1-rc3", features = ["html"] }
+reflexo-vec2svg = { version = "0.6.1-rc3", features = [
     "experimental-ligature",
 ] }
-tinymist-task = { version = "0.13.12" }
+tinymist-task = { version = "0.13.24-rc1" }
 
 # general
 anyhow = "1"
@@ -82,16 +82,16 @@ typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typ
 typst-eval = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0" }
 # typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
 
-reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "a8132e5151435b9d51e76cb34b482acfd0526844" }
-reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "a8132e5151435b9d51e76cb34b482acfd0526844" }
+# reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "a8132e5151435b9d51e76cb34b482acfd0526844" }
+# reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "a8132e5151435b9d51e76cb34b482acfd0526844" }
 
-typst-shim = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-tinymist-derive = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-tinymist-std = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-tinymist-task = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-tinymist-package = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-tinymist-project = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
+# typst-shim = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
+# tinymist-derive = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
+# tinymist-std = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
+# tinymist-task = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
+# tinymist-package = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
+# tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
+# tinymist-project = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
 
 # typst = { path = "../typst/crates/typst" }
 # typst-syntax = { path = "../typst/crates/typst-syntax" }
