--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ reflexo-typst = { version = "0.7.0-rc1", features = ["html"] }
 reflexo-vec2svg = { version = "0.7.0-rc1", features = [
     "experimental-ligature",
 ] }
-tinymist-task = { version = "0.14.0-rc1" }
+tinymist-task = { version = "0.14.0" }
 
 # general
 anyhow = "1"
@@ -82,16 +82,16 @@ typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typ
 typst-eval = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.7.0-rc1" }
 # typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
 
-# reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "a8132e5151435b9d51e76cb34b482acfd0526844" }
-# reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "a8132e5151435b9d51e76cb34b482acfd0526844" }
+reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "4ac1529f9452c16ee7ee4bb56ead40bfba1066b9" }
+reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "4ac1529f9452c16ee7ee4bb56ead40bfba1066b9" }
 
-# typst-shim = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-# tinymist-derive = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-# tinymist-std = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-# tinymist-task = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-# tinymist-package = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-# tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
-# tinymist-project = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
+typst-shim = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "052149a509b686fa9111dd99eb278ce1213abdf2" }
+tinymist-derive = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "052149a509b686fa9111dd99eb278ce1213abdf2" }
+tinymist-std = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "052149a509b686fa9111dd99eb278ce1213abdf2" }
+tinymist-task = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "052149a509b686fa9111dd99eb278ce1213abdf2" }
+tinymist-package = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "052149a509b686fa9111dd99eb278ce1213abdf2" }
+tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "052149a509b686fa9111dd99eb278ce1213abdf2" }
+tinymist-project = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "052149a509b686fa9111dd99eb278ce1213abdf2" }
 
 # typst = { path = "../typst/crates/typst" }
 # typst-syntax = { path = "../typst/crates/typst-syntax" }
